@@ -5,6 +5,9 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 22-04-2005 fixed: Location of Kai Thumbs didn't use the thumbs folder configured.
+  - 22-04-2005 added: gapless mp3 playback.  Files should be encoded with LAME (>3.90.3) in order to be truly gapless.
+  - 22-04-2005 changed: Enable Visualisation combined into vis spincontrol (first option is Off).
   - 22-04-2005 changed: my music, adding songs to existing, stopped playlist will start the first song added
   - 22-04-2005 added: audioscrobbler now saves a cache if no server is available or connection failed
   - 22-04-2005 fixed: audioscrobbler tried to submit songs, before the initial handshake with the server succeeds
